--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- CRITICAL: Viewport settings for mobile layout stability. DO NOT CHANGE. 
+         Keep user-scalable=no to prevent zoom issues. 
+         Do NOT add viewport-fit=cover as it breaks status bar handling. -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>BMS - Business Management System</title>
 
