--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
     <div id="reset-success-modal" class="modal-overlay hidden">
         <div class="modal-content" style="text-align: center; max-width: 450px;">
             <div style="font-size: 4rem; margin-bottom: 1rem;">🔐</div>
-            <h3 class="card-title" style="margin-bottom: 1rem;">Password Updated!</h3>
+            <h3 class="card-title" style="margin-bottom: 1rem;">Password Updated & Saved to Clipboard!</h3>
             <div
                 style="background: var(--bg-glass); padding: 1.25rem; border-radius: var(--radius-lg); margin-bottom: 1.5rem; text-align: left; border: 1px solid var(--border);">
                 <p style="font-size: 0.8rem; color: var(--text-muted); margin-bottom: 1rem;">New Branch Credentials:</p>
