--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <!-- PWA Meta Tags -->
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#0d503c">
-    <link rel="icon" type="image/png" href="icons/icon-circle-96.png">
-    <link rel="apple-touch-icon" href="icons/icon-circle-192.png">
+    <link rel="icon" type="image/png" href="icons/bms-logo-96.png">
+    <link rel="apple-touch-icon" href="icons/bms-logo-192.png">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
