--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- PWA Meta Tags -->
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#0d503c">
+    <link rel="icon" type="image/png" href="icons/bms-logo-72.png">
     <link rel="icon" type="image/jpeg" href="bms-logo.jpeg">
     <link rel="apple-touch-icon" href="icons/bms-logo-192.png">
     <meta name="mobile-web-app-capable" content="yes">
