--- a/index.html
+++ b/index.html
@@ -102,8 +102,12 @@
                 <!-- Branch Login Form -->
                 <form id="branch-login-form" class="auth-form hidden">
                     <div class="input-group">
+                        <label for="branch-enterprise-email">Enterprise Email</label>
+                        <input type="email" id="branch-enterprise-email" placeholder="admin@company.com" required>
+                    </div>
+                    <div class="input-group">
                         <label for="branch-login-id">Branch ID</label>
-                        <input type="text" id="branch-login-id" placeholder="e.g. branch-001-Code" required>
+                        <input type="text" id="branch-login-id" placeholder="e.g. BR-NO-001-KDM" required>
                     </div>
                     <div class="input-group">
                         <label for="branch-login-password">Branch Password</label>
@@ -521,20 +525,19 @@
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
                 navigator.serviceWorker.register('./sw.js').then(registration => {
-                    console.log('ServiceWorker registered with scope:', registration.scope);
+                    console.log('ServiceWorker registered');
 
-                    // Check for updates every 15 minutes (optional, for long-running tabs)
+                    // Check for updates every 5 minutes
                     setInterval(() => {
                         registration.update();
-                    }, 15 * 60 * 1000);
+                    }, 5 * 60 * 1000);
 
-                    // Listen for new worker waiting
                     registration.addEventListener('updatefound', () => {
                         const newWorker = registration.installing;
                         newWorker.addEventListener('statechange', () => {
                             if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
-                                // New version available!
-                                showUpdateToast();
+                                // Automatically skip waiting to activate new SW
+                                newWorker.postMessage({ type: 'SKIP_WAITING' });
                             }
                         });
                     });
@@ -544,40 +547,11 @@
             });
 
             // Handle controller change (when new SW takes over)
+            let refreshing = false;
             navigator.serviceWorker.addEventListener('controllerchange', () => {
+                if (refreshing) return;
+                refreshing = true;
                 window.location.reload();
-            });
-        }
-
-        function showUpdateToast() {
-            // Use existing Dashboard toast or create a custom one
-            const toast = document.createElement('div');
-            toast.className = 'toast toast-info';
-            toast.style.cssText = `
-                position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%);
-                background: var(--bg-surface-elevated); border: 1px solid var(--accent);
-                padding: 1rem 1.5rem; border-radius: var(--radius-lg);
-                box-shadow: 0 10px 30px rgba(0,0,0,0.3); z-index: 9999;
-                display: flex; align-items: center; gap: 1rem;
-            `;
-            toast.innerHTML = `
-                <div>
-                    <strong style="color:var(--text-main)">Update Available</strong>
-                    <div style="font-size:0.85rem; color:var(--text-muted)">A new version is ready.</div>
-                </div>
-                <button id="update-refresh-btn" class="btn-primary" style="padding: 0.5rem 1rem;">Refresh</button>
-            `;
-            document.body.appendChild(toast);
-
-            document.getElementById('update-refresh-btn').addEventListener('click', () => {
-                // Skip waiting on new worker
-                navigator.serviceWorker.getRegistration().then(reg => {
-                    if (reg && reg.waiting) {
-                        reg.waiting.postMessage({ type: 'SKIP_WAITING' });
-                    } else {
-                        window.location.reload();
-                    }
-                });
             });
         }
     </script>
